# rust-flock-of-boids

./: .editorconfig  .gitignore  Cargo.toml  README.md
assets/sprites/: bird.ron
config/: display_config.ron
src/: boid.rs  constants.rs  point.rs  vector.rs  with_amethyst.rs  with_bevy.rs  with_piston.rs  with_tetra.rs  world.rs
